# sctools

./: pyproject.toml
sctools/: __main__.py  cellbender_utils.py  cellranger_utils.py  crmulti.py  main.py
sctools/templates/: Biolegend_feature.csv  cellbender_template.slurm  demux_config_template.csv  sample_config_template.csv
