[tool.poetry]
name = "sctools"
version = "0.1.0"
description = ""
authors = ["Rijul <rijul.singhal1@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
sctools = "sctools.main:app"


[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.13.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
typing-extensions = "^4.12.2"
ipykernel = "^6.29.5"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
